--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "nuxt prepare",
     "typecheck": "nuxt typecheck",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.3.0",
@@ -23,8 +25,13 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxt/fonts": "^0.11.1",
+    "@nuxt/test-utils": "^3.17.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.4",
+    "playwright-core": "^1.51.1",
     "sass-embedded": "^1.86.3",
     "typescript": "^5.8.3",
+    "vitest": "^3.1.1",
     "vue-tsc": "^2.2.8",
     "vuetify-nuxt-module": "^0.18.6"
   }
